# TryOuts

src/: Evenable.cpp  Int2Roman.cpp  MaxProducts.cpp  NodeDistance.cpp  TemplateTest.cpp  simStr  similarstrings.cpp
src/EightQueenService/: CMakeLists.txt  EightQueen.cpp  EightQueen.hpp  main.cpp  request_example.json
